--- a/index.html
+++ b/index.html
@@ -5,17 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Alexandr Karavai</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="build/css/normalize.css">
+  <link rel="stylesheet" href="build/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <header>
-    <h2>Test</h2>
+  <header class="container">
+    <div class="left">
+      <img class="img-av"
+    src="https://avatars1.githubusercontent.com/u/17318739?s=400&u=b5fe6682ac55b8c81b0ab094a5f9040603846f74&v=4">
+    </div>
+    <div class="right" id="about__me">
+      <h1>Alexandr Karavai</h1>
+      <h3>Student</h3>
+      <h4>Belarusian State University of Informatics and Radioelectronics</h4>
+      <ul class="list">
+        <li>
+          <i class="fa fa-map-marker fa-lg"> </i> Minsk, Belarus
+        </li>
+        <li>
+          <i class="fa fa-envelope fa-lg"> </i> karavai96-2010@mail.ru
+        </li>
+        <li>
+          <i class="fa fa-skype fa-lg"> </i> )))))
+        </li>
+      </ul>
+    </div>
   </header>
-  <article class="">
+  <article class="container">
 
   </article>
-  <footer>
+  <footer class="container">
 
   </footer>
 </body>
