--- a/index.html
+++ b/index.html
@@ -26,17 +26,45 @@
         <li>
           <i class="fa fa-envelope fa-lg"> </i> karavai96-2010@mail.ru
         </li>
-        <li>
-          <i class="fa fa-skype fa-lg"> </i> )))))
-        </li>
       </ul>
     </div>
   </header>
   <article class="container">
-
+    <h2>My works</h2>
+    <div class="container">
+      <div class="left">
+        <h4>SITE OF THE TOURIST FIRM</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel quasi, ullam placeat quam, temporibus eum eaque voluptate explicabo ducimus dicta laborum consectetur commodi vero reiciendis. Consequuntur eaque, molestias laudantium obcaecati accusantium dolorum dolor cum sed laborum labore exercitationem neque ab esse officiis officia. Voluptatem possimus illo esse magnam, recusandae, dicta quos quaerat iure accusamus soluta error ipsam cumque ratione tempore dolorem. Ex maiores, aliquid adipisci facilis itaque, praesentium asperiores, impedit vitae et suscipit, deserunt neque voluptate consectetur? Provident minima earum dolores, minus, officia harum odit eius asperiores voluptas voluptates qui.</p>
+      </div>
+      <div class="right">
+        <div class="img-content">
+           <figure>
+             <img src="build/img/img.png" alt="" class="template">
+           </figure>
+       </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="right">
+        <div class="img-content">
+           <figure>
+             <img src="build/img/mate.png" alt="" class="template">
+           </figure>
+       </div>
+      </div>
+      <div class="left">
+        <h4>Single Page Mate Template</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel quasi, ullam placeat quam, temporibus eum eaque voluptate explicabo ducimus dicta laborum consectetur commodi vero reiciendis. Consequuntur eaque, molestias laudantium obcaecati accusantium dolorum dolor cum sed laborum labore exercitationem neque ab esse officiis officia. Voluptatem possimus illo esse magnam, recusandae, dicta quos quaerat iure accusamus soluta error ipsam cumque ratione tempore dolorem. Ex maiores, aliquid adipisci facilis itaque, praesentium asperiores, impedit vitae et suscipit, deserunt neque voluptate consectetur? Provident minima earum dolores, minus, officia harum odit eius asperiores voluptas voluptates qui.</p>
+      </div>
+    </div>
   </article>
   <footer class="container">
-
+    <div class="left">
+      <span><i class="fa fa-copyright fa-lg" aria-hidden="true"></i> 2018 Yandex</span>
+    </div>
+    <div class="right">
+      <span>Designed & Developed by Alexandr Karavai exclusively for GitHub</span>
+    </div>
   </footer>
 </body>
 </html>
